Fixed CSS for hiding weekend days on narrow displays

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -114,7 +114,7 @@ h1.brand > span + span, .navbar-brand > span + span {
         padding-right: 20px;
         color: #222;
     }
-    .calendar th:first-of-type, .calendar th:first-of-type, .calendar td:last-of-type, .calendar td:last-of-type {
+    .calendar tr th:first-of-type, .calendar tr th:last-of-type, .calendar tr td:first-of-type, .calendar tr td:last-of-type {
         display: none;
     }
     .calendar {
